--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,8 @@ tqdm==4.65.0
 transformers==4.33.2
 lightning==2.0.9
 pillow==9.5.0
+torch_geometric
+scikit-learn
+netlsd
+matplotlib==3.8.3
+pandas==2.1.4
